--- a/page_de_style.css
+++ b/page_de_style.css
@@ -70,6 +70,10 @@ footer {
 	padding-left: 0 !important;
 }
 
+.navbar-collapse {
+	max-height: 400px !important;
+}
+
 
 	.navbar-inverse .navbar-brand{
 		color: #8acafa;
