--- a/page_de_style.css
+++ b/page_de_style.css
@@ -678,21 +678,23 @@ footer {
 }
 
 #disco {
-z-index:1;
-pointer-events: none;
-position: absolute;
-margin-left:-150px;
-width:300px;
-height:300px;
-border-radius:150px;
-background-color:rgba(255,255,100,0.1);
-animation: d 10s infinite linear;
-animation-direction: alternate-reverse;
+	z-index:1;
+	pointer-events: none;
+	touch-action: none;
+	position: absolute;
+	margin-left:-150px;
+	width:300px;
+	height:300px;
+	border-radius:150px;
+	background-color:rgba(255,255,100,0.1);
+	animation: d 10s infinite linear;
+	animation-direction: alternate-reverse;
 }
 
 #disco2 {
 	z-index:1;
 	pointer-events: none;
+	touch-action: none;
 	position: absolute;
 	margin-left:-150px;
 	width:300px;
@@ -722,6 +724,7 @@ animation-direction: alternate-reverse;
 #disco {
 	z-index:1;
 	pointer-events: none;
+	touch-action: none;
 	position: absolute;
 	margin-left:-300px;
 	width:600px;
@@ -735,6 +738,7 @@ animation-direction: alternate-reverse;
 #disco2 {
 	z-index:1;
 	pointer-events: none;
+	touch-action: none;
 	position: absolute;
 	margin-left:-300px;
 	width:600px;
